2012-08-07  James Robinson  <jamesr@chromium.org>

        [chromium] Use WebCompositor interface in Platform API instead of CCProxy to query threaded compositor status
        https://bugs.webkit.org/show_bug.cgi?id=93398

        Reviewed by Adam Barth.

        Adds thread status query interfaces to WebCompositor for WebKit code that wants to know if we are in threaded
        mode.

        * chromium/public/WebCompositor.h:
        (WebCompositor):

2012-08-07  James Robinson  <jamesr@chromium.org>

        [chromium] Move WebCompositor interface into Platform API
        https://bugs.webkit.org/show_bug.cgi?id=93391

        Reviewed by Adam Barth.

        WebCompositor is logically part of the Platform API, along with WebLayerTreeView and the WebLayer types.

        * chromium/public/WebCompositor.h: Renamed from Source/WebKit/chromium/public/WebCompositorClient.h.
        (WebKit):
        (WebCompositor):
        (WebKit::WebCompositor::~WebCompositor):

2012-08-06  James Robinson  <jamesr@chromium.org>

        [chromium] Remove lingering unwrap<>() calls in GraphicsLayerChromium.cpp
        https://bugs.webkit.org/show_bug.cgi?id=93319

        Reviewed by Adrienne Walker.

        Adds a few more entry points to WebLayer that are being used by GraphicsLayerChromium.

        * chromium/public/WebLayer.h:
        (WebLayer):

2012-08-06  Antoine Labour  <piman@chromium.org>

        [chromium] add sync points and GL_CHROMIUM_texture_mailbox entrypoints to WebGraphicsContext3D
        https://bugs.webkit.org/show_bug.cgi?id=93313

        Reviewed by James Robinson.

        Sync points already landed chromium-side, mailbos at https://chromiumcodereview.appspot.com/10829209/

        * chromium/public/WebGraphicsContext3D.h:
        (WebKit::WebGraphicsContext3D::insertSyncPoint):
        (WebKit::WebGraphicsContext3D::waitSyncPoint):
        (WebGraphicsContext3D):
        (WebKit::WebGraphicsContext3D::genMailboxCHROMIUM):